# greenland-ird-agu-2023

./: .gitignore  README.md  TODO.txt  __init__.py  advection_prototype.py  pyproject.toml  results_production.csv
components/: __init__.py  conduit_hydrology.py  drainage_system.py  frozen_fringe.py  glacial_eroder.py  model_state.py  steady_state_hydrology.py
components/hydrology/: schoof-1d-prototype.py
examples/cores/gisp2/: cuffey-1999-accumulation.csv  kangilliup-sermia.geojson  kobashi-2017-temperature.csv  kobashi-2017-temperature.xlsx  load-gisp2.py  prototype.py  run_gisp2.py
examples/cores/gisp2/archive/: run_gisp2.py
examples/cores/gisp2/results/txt/: kangilliup-sermia_95.txt
examples/hydrology/: glads_config.py
examples/ird/: run_greenland_field_sites.py
tests/: test_conduit_hydrology.py  test_drainage_system.py  test_frozen_fringe.py  test_glacial_eroder.py  test_model_state.py  test_static_grid.py  test_steady_state_hydrology.py  test_tvd_advection.py  test_unstructured_tvd.py
tests/fixtures/: __init__.py  state.py
utils/: __init__.py  grid_loader.py  plotting.py  static_grid.py  tvd_advection.py  unstructured_tvd.py  upwind_advection.py
